Fix horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,11 @@
 html {
     height: 100%;
     
-
 }
 body {
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
+
 }
 /* --------  START CSS FOR THE BASE PAGE ---------*/
 
